# Ariadne

./: .gitignore  .readthedocs.yaml  AI_POLICY.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  MASTER_PLAN.md  README.md  RELEASING.md  SECURITY.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  start_dashboard.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
benchmarks/: discovery_synthetic_injection.py  hapsira_crosscheck.py  heteroclinic_honest_dv.py  imaging_pipeline_e2e.py  reference_targets.py  stage22_dsm_isolation.py  stage45_honest_dv.py  textbook_crosscheck.py
data/: distant_tnos.json  distant_tnos_sigma.json  neural_orbit_prior_weights.json  scheduler_ledger.json  survey_targets.txt
docs/: CAPABILITY_SUMMARY.md  CHARACTERIZATION_ENGINE.md  CISLUNAR_MISSION_ARCHITECT.md  COHERENCE_REAL_DATA_SCORECARD.md  FRONTIER_CAPABILITIES.md  FRONTIER_FINDINGS.md  LSST_READINESS.md  OPERATIONAL_DISCOVERY.md  OPERATIONS.md  PRODUCTION_DISCOVERY_PIPELINE.md  PUBLIC_LAUNCH_AUDIT.md  README.md  REAL_BENCHMARKS.md  REVIEWER_GUIDE.md  SENSITIVITY.md  SOLAR_SYSTEM_NAVIGATOR.md  VALIDATION_RESULTS.md  WHITE_PAPER.md
examples/: 01_lyapunov_family.py  02_gateway_nrho.py  03_manifold_transport.py  04_tno_orbit_fit.py  05_helmholtz_hjb.py  06_veega_jupiter.py  07_lambert_porkchop.py  08_ztf_alert_filter.py  09_decam_synthetic.py  10_nightly_discovery.py  README.md
notebooks/: 01_lyapunov_family.ipynb  02_gateway_nrho.ipynb  03_manifold_transport.ipynb  04_tno_orbit_fit.ipynb  05_helmholtz_hjb.ipynb  06_reviewer_replication.ipynb  README.md
scripts/: README.md  acquire_real_labelled_corpus.py  architect_cislunar_mission.py  benchmark_engine_improvement.py  benchmark_image_pipeline.py  benchmark_solar_navigator.py  benchmark_transport_admissibility.py  bootstrap_scheduler_from_benchmark.py  build_artifact_manifest.py  build_closure_report.py  build_dream_run.py  build_external_inference_benchmark.py  build_reviewer_evidence_manifest.py  build_solar_transfer_atlas.py  calibrate_confidence.py  calibrate_mover.py  calibrate_vet.py  calibrate_ztf.py  check_coorbital.py  cockpit_worker.py  compare_replay_manifests.py  compare_solar_navigator_benchmarks.py  confirm_pair.py  coorbital_rebound.py  coorbital_resonant_angle.py  coorbital_sweep.py  dashboard.py  diagnose_2015_field_knowns.py  diagnose_detection_fix.py  diagnose_match_distance.py  diagnose_pixel_truth.py  diagnose_recall_vs_mag.py  extract_field_to_npz.py  fetch_and_validate_jpl.py  fetch_discovery_field.py  fetch_nsc_field.py  find_discovery_field.py  fit_calibration_large_corpus.py  fix_notebook_ids.py  gaia_encounters.py  (+45 more)
tests/: test_advanced_linking.py  test_artifact_manifest.py  test_atlas.py  test_autodiff.py  test_bayesian_linker.py  test_bcr4bp.py  test_black_hole_discriminator.py  test_budget.py  test_certification.py  test_chain_iod.py  test_chain_refinement.py  test_characterize.py  test_characterize_engine.py  test_closure_ledger.py  test_clustering.py  test_coherence.py  test_coherence_calibrate.py  test_coherence_field.py  test_coherence_inference.py  test_coherence_optimizer.py  test_coherence_vet.py  test_connections.py  test_cr3bp.py  test_decam_instcal.py  test_default_closure.py  test_detection_db.py  test_difference.py  test_discovery.py  test_discovery_100pct_push.py  test_discovery_complete.py  test_discovery_coverage_boost.py  test_discovery_hammer.py  test_discovery_intelligence.py  test_discovery_operations.py  test_discovery_ops_hardening.py  test_discovery_pipeline.py  test_discovery_round2.py  test_discovery_sensitivity_layer.py  test_discovery_smart_layer.py  test_discovery_total.py  (+82 more)
(+323 files in other folders)
